themes/documentation/source/css/_partial/header.scss
.header {
  position: relative;
  @media (min-width: $body-bp + 1) {
    position: fixed;
  }
  line-height: 50px;
  background: $black;
  vertical-align: middle;
  width: 100%;
  z-index: 999999;
  font-size: 14px;

  &-search {

    &-open {
      overflow: hidden;
    }

    &-btn {
      color: $yellow;
      float: right;
      margin-right: 25px;
      font-size: 20px;
      cursor: pointer;
    }

    &-panel {
      line-height: initial;
      background: white;
      position: fixed;
      z-index: 99;
      top: 80px;
      left: 0;
      right: 0;
      bottom: 0;
      width: 1200px;
      margin: auto;
      box-shadow: 0 2px 10px rgba(0,0,0,0.3);
      
      display: none;
      opacity: 0;
      // transform: scale(1.5);
      transition: all 0.3s ease;

      &.in {
        display: block;
        opacity: 1;
        // transform: scale(1);
      }
    }

    &-trend {
      width: 70%;
      position: relative;
      margin-left: auto;
      margin-right: auto;
      margin-top: 50px;
      line-height: initial;

      &-title {
        border-left: 3px solid $yellow;
        color: #111;
        padding: 5px 10px;
        font-weight: bold;
      }

      &-items {
        margin-top: 20px;
      }

      &-item {
        float: left;
        margin-right: 50px;
        cursor: pointer;
        color: #aaa;
      }
    }

    &-result {
      padding: 15px;
      overflow: auto;
      margin-top: 15px;

      &-empty {
        padding: 30px;
        font-size: 18px;
        text-align: center;
        color: #aaa;
      }

      &-head {
        color: #aaa;
        padding: 10px 0;
        border-bottom: 1px solid #ddd;
      }

      &-item {
        padding: 10px 0;
        border-bottom: 1px solid #ddd;

        &-title {
          font-weight: bold;

          > a {
            color: #333;
          }
        }

        .hl {
          font-weight: bold;
          color: #111;
          background: $yellow;
        }
      }
    }

    &-input {
      font-size: 16px;
      outline: 0;
      width: 100%;
      box-shadow: 0 2px 3px rgba(0,0,0,0.06);
      border: 1px solid #ddd;
      padding: 10px 15px;
      padding-left: 50px;
      border-radius: 3px;

      &-icon {
        position: absolute;
        font-size: 24px;
        top: 4px;
        left: 15px;
        color: #999;
      }

      &-wrap {
        width: 70%;
        position: relative;
        margin-left: auto;
        margin-right: auto;
        margin-top: 50px;
      }
    }
  }
  
  .brand {
    @media (max-width: $header-bp) {
      display: none;
    }
    font: {
      weight: bold;
    }
    a {
      color: $yellow;
    }
  }

  .logo {
    color: $yellow;
    img {
      vertical-align: middle;
    }
  }

  .text {
    margin-left: 20px;
    padding: 5px 0 5px 20px;
    border-left: 1px solid $yellow;
  }

  .menu {
    @media (max-width: $header-bp) {
      width: 100%;
      max-height: 70%;
      overflow: scroll;
    }
    a {
      @media (min-width: $header-bp + 1) {
        padding: 0 15px;
      }
      display: block;
    }
    ul {
      padding-left: 0;
      margin: 0;
    }
    li {
      @media (max-width: $header-bp) {
        display: block;
      }
      display: inline-block;
      list-style-type: none;
      &:hover {
        cursor: pointer;
      }
    }
    &,
    a {
      color: $yellow;
      &,
      &:hover {
        text-decoration: none;
      } 
    }
    .levelA,
    .levelB {
      position: relative;
    }
    .levelB-wrapper,
    .levelC-wrapper {
      @media (max-width: $header-bp) {
        position: inherit;
        padding: 0 20px;
        background: inherit;
        border: none;
        box-shadow: none;
      }
      white-space: nowrap;
      display: none;
      position: absolute;
      z-index: 999;
      background: white;
      border: 1px solid $dark-gray;
      box-shadow: 2px 2px 10px $light-gray;
      &,
      & a {
        color: $black;
      }
      li:hover {
        @media (max-width: $header-bp) {
          background: $black;
        }
        background: $dark-gray;
      }
    }
    .levelB-wrapper {
      @media (min-width: $header-bp + 1) {
        left: 0;
        top: 100%;
        padding: 10px 0;
      }
    }
    .levelC-wrapper {
      @media (min-width: $header-bp + 1) {
        left: 100%;
        top: 0;
      }
    }
    .levelB,
    .levelC {
      &,
      &:hover,
      a {
        @media (max-width: $header-bp) {
          color: $yellow;
          background: $black;
        }
      }
      display: block;
      &,
      a {
        line-height: 2em;
      }
    }
    .levelB.has-submenu {
      @media (min-width: $header-bp + 1) {
        padding: 0 15px;
      }
    }
    .levelA {
      @media (min-width: $header-bp + 1) {
        padding: 0 10px;
        &:first-child {
          padding: {
            left: 15px;
          }
        }
        > a {
          padding: 0;
        }
      } 
    }
  }

  .fa-globe {
    color: $yellow;
    margin-right: 3px;
  }

  .lang-switch {
    padding: 0;
    border: 0;
    background: none;
    color: $yellow;
    &:focus {
      outline: none;
    }
  }

  .lang-switch-wrapper {
    @media (max-width: $header-bp) {
      width: 100%;
      text-align: right;
    }
  }

  .menu,
  .lang-switch-wrapper {
    @media (max-width: $header-bp) {
      padding: 0 20px;
      display: none;
    }
  }

  .mobile-header {
    padding: 0 30px;
    width: 100%;
    color: $yellow;
    text-align: center;
    letter-spacing: 0;
    font-size: 16px;
    background: black;
    .fa {
      float: right;
      line-height: 50px;
    }
    @media (min-width: $header-bp) {
      display: none;
    }
    @media (max-width: $header-bp + 1) {
      display: block;
    }
  }
}

